K8s2/probot-consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\merel.foekens\Downloads\kompose-windows-amd64.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: probot-consumer
  name: probot-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: probot-consumer
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\merel.foekens\Downloads\kompose-windows-amd64.exe convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/probot-rabbit-network: "true"
        io.kompose.service: probot-consumer
    spec:
      containers:
        - env:
            - name: AMQP_URL
              value: amqp://guest:guest@rabbitmq:5672?connection_attempts=5&retry_delay=5
            - name: EXECUTOR
              value: Docker Executor 1
            - name: QUEUE_NAME
              value: probot_queue
          image: consumer:latest
          name: consumer
          imagePullPolicy: Never
          ports:
            - containerPort: 52325
          resources: { }
          volumeMounts:
            - mountPath: ./test-output
              name: test-outputs
            - mountPath: ./test-suites
              name: probot-consumer-claim1
      restartPolicy: Always
      volumes:
        - name: test-outputs
          persistentVolumeClaim:
            claimName: test-outputs
        - name: probot-consumer-claim1
          persistentVolumeClaim:
            claimName: probot-consumer-claim1
status: { }
