K8s2/rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\merel.foekens\Downloads\kompose-windows-amd64.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: rabbitmq
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rabbitmq
  strategy: { }
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\merel.foekens\Downloads\kompose-windows-amd64.exe convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/probot-rabbit-network: "true"
        io.kompose.service: rabbitmq
    spec:
      containers:
        - image: rabbitmq:3.8-management
          name: rabbitmq
          ports:
            - containerPort: 5672
            - containerPort: 15672
          resources: { }
      hostname: rabbitmq
      restartPolicy: Always
status: { }
