K8s2/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\merel.foekens\Downloads\kompose-windows-amd64.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: rabbitmq
  name: rabbitmq
spec:
  ports:
    - name: "rabbitmq-protocol"
      port: 5672
      targetPort: 5672
    - name: "rabbitmq-management"
      port: 15672
      targetPort: 15672
  selector:
    io.kompose.service: rabbitmq
  type: NodePort
status:
  loadBalancer: { }
